examples/invalid/extra_parenthesis.mini
# Ошибка: лишняя закрывающая скобка
2+3)
